fixed overflow issues

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,7 @@
 }
 
 .footer .container {
-  width: 1240px;
+  width: 100%;
   margin: auto;
   text-align: center;
 }
