--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,20 +1,28 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
 .hero {
   background-color: var(--overlay);
   color: #fff;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
+}
+
+a {
+  text-decoration: none;
 }
 
 .hero:before {
   content: '';
   background: url('../../public/assets/hero.jpeg');
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: -1;
 }
 
@@ -64,5 +72,11 @@
   .hero .content p:nth-child(4) {
     font-size: 1.8rem;
     font-style: italic;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
