--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,6 +27,10 @@
   color: #ffffff;
 }
 
+li .nav-item {
+  font-size: large;
+}
+
 .header .navbar .logo {
   font-size: 1.5rem;
   font-weight: 600;
@@ -50,6 +54,11 @@
 
 .hamburger {
   display: none;
+}
+
+.links {
+  margin-top: '3rem' !important;
+
 }
 
 @media screen and (max-width:940px) {
