--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -3,7 +3,7 @@
 }
 
 .testimonials .container {
-  width: 1240px;
+  width: 100%;
   margin: 4rem auto;
   padding: 4rem 0rem;
 }
